购买理财产品继续完善流程7-先把第一种理财对话逻辑训练一下不然太累

--- a/data/nlu/general.yml
+++ b/data/nlu/general.yml
@@ -210,3 +210,5 @@ nlu:
     - [1700块](amount-of-money)
     - [5000元](amount-of-money)
     - 讲一讲[基金](finance_type)产品
+    - [五万](amount-of-money)
+    - [5万](amount-of-money)
