--- a/data/stories/strories_purchase_finance.yml
+++ b/data/stories/strories_purchase_finance.yml
@@ -1,24 +1,36 @@
-#version: "2.0"
-#stories:
-#  - story: Story from Conversation ID 48edf17a9e9e415dac8fa8708b848c84
-#    steps:
-#      - slot_was_set:
-#          - currency: $
-#      - intent: want_to_buy_finance
-#      - action: purchase_finance_form
-#      - active_loop: purchase_finance_form
-#      - slot_was_set:
-#          - requested_slot: finance_product
-#      - intent: inform
-#      - action: purchase_finance_form
-#      - slot_was_set:
-#          - finance_product: 鑫利达
-#      - slot_was_set:
-#          - requested_slot: finance_amount
-#      - intent: inform
-#      - action: purchase_finance_form
-#      - slot_was_set:
-#          - finance_amount: '50'
-#      - slot_was_set:
-#          - requested_slot: null
-#      - active_loop: null
+version: "2.0"
+stories:
+  - story: Story from Conversation ID dfc3d7d0c80d4964b6225a1528d937aa
+    steps:
+      - intent: want_to_buy_finance
+      - action: recommand_finance_product
+      - slot_was_set:
+          - recommand_list: '[{"minimum_amount": "10000.0", "type": "理财", "name": "日鑫系列天天盈B款", "id": 5, "description": "申赎灵活、流动性高、投资策略稳健", "rate": "2.83"}, {"minimum_amount": "300.0", "type": "基金", "name": "华安安康A", "id": 4, "description": "基金经理为陆奔、石雨欣，通过对权益类资产和固定收益资产的灵活配置充分捕捉各类证券子市场的绝对收益机会。", "rate": "1.69"}, {"minimum_amount": "5000.0", "type": "保险", "name": "利安永吉终身寿险", "id": 7, "description": "意外保障，缴费灵活", "rate": null}, {"minimum_amount": "200000.0", "type": "大额存单", "name": "2022年二十六期个人大额存单", "id": 3, "description": "发行期为2022年4月1日至2022年4月30日", "rate": "2.1"}, {"minimum_amount": "100.0", "type": "柜台债", "name": "国家开发银行2022年第二期金融债券", "id": 6, "description": "续发行，票面利率2.59", "rate": "2.43"}]'
+      - intent: appoint_which_one
+      - action: action_handle_which_one
+      - slot_was_set:
+          - finance_product: 华安安康A
+      - action: action_finance_detail
+      - intent: want_to_purchase
+      - action: utter_ask_product_amt
+      - intent: inform
+        entities:
+          - amount-of-money: 5万
+      - slot_was_set:
+          - amount-of-money: 5万
+      - action: fill_products_amount
+      - slot_was_set:
+          - finance_amount: '1000'
+      - action: buy_financial_products
+      - slot_was_set:
+          - which_one: null
+      - slot_was_set:
+          - finance_product: null
+      - slot_was_set:
+          - finance_amount: null
+      - slot_was_set:
+          - confirm_purchase: null
+      - slot_was_set:
+          - concern_rate: null
+      - slot_was_set:
+          - success_purchase: true
